# sourceCode/GiamSat.API/GiamSat.Models/Authorize/PermissionRequirement.cs
@@ -1,0 +1,14 @@
+using Microsoft.AspNetCore.Authorization;
+
+namespace GiamSat.Models
+{
+    public sealed class PermissionRequirement : IAuthorizationRequirement
+    {
+        public PermissionRequirement(string permission)
+        {
+            Permission = permission;
+        }
+
+        public string Permission { get; }
+    }
+}
